# truncateb

./: .gitignore  README.md  meson.build  truncateb.1.ronn  truncateb.c
po/: POTFILES  ru.po  truncateb.pot
tests/: srcfile  test_wrapper.py
